# CPPScheme

./: .clang-format  .dir-locals.el  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.org
doc/: CMakeLists.txt  Doxyfile.in
include/: Either.hpp  Environment.hpp  Parser.hpp  Procedures.hpp  Scheme.hpp  Scheme_value.hpp  Utils.hpp
include/Scheme_values/: Atom.hpp  Bool.hpp  Built_in.hpp  Character.hpp  Lambda.hpp  List.hpp  Nil.hpp  Number.hpp  Scheme_value.hpp  String.hpp  Vector.hpp
include/Scheme_values/graphics/: Image.hpp  Window.hpp
resources/: stdlib.scm
src/: Atom.cpp  Bool.cpp  Built_in.cpp  CMakeLists.txt  Character.cpp  Environment.cpp  Lambda.cpp  List.cpp  Nil.cpp  Number.cpp  Parser.cpp  Scheme.cpp  Scheme_value.cpp  String.cpp  Utils.cpp  main.cpp
src/Scheme_values/: Atom.cpp  Bool.cpp  Built_in.cpp  Character.cpp  Lambda.cpp  List.cpp  Nil.cpp  Number.cpp  Scheme_value.cpp  String.cpp  Vector.cpp
src/Scheme_values/graphics/: Image.cpp
test/: CMakeLists.txt  Parser_test.cpp
